--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 {
                     name: '橙光',
                     artist: '阿yueyue',
-                    url: 'https://alist.bigbabyer.eu.org/d/aicloud/Alist/%E9%9F%B3%E4%B9%90/%E9%98%BFYueYue%20%E2%80%93%20%E6%A9%99%E5%85%89%E3%80%8A%E6%9C%AB%E7%94%9F%E3%80%8B%E6%9C%B4%E7%81%BF%E7%83%88%E8%A7%92%E8%89%B2%E6%AD%8C%E3%80%90%E7%AD%89%E4%B8%8D%E5%8F%8A%E3%80%91%EF%BC%88Cover%20Ailee%EF%BC%89.mp3?sign=-DT6bGYx16enURm4mXifuEJ6F9p1i10sO10I79q92eo=:0',
+                    url: 'https://alist.bigbabyer.eu.org/d/aicloud/Alist/%E9%9F%B3%E4%B9%90/%E6%9D%8E%E4%B8%BD%E8%8A%AC%20%E2%80%93%20%E7%88%B1%E6%B1%9F%E5%B1%B1%E6%9B%B4%E7%88%B1%E7%BE%8E%E4%BA%BA.flac?sign=igUNxzvu8lQ0Ap9ymLFBoXlg65EOP3PvVxqgGYUjxoc=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
