--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
+                    name: '与我无关',
+                    artist: '阿冗',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E5%AF%B9%E6%8E%A5Aplayer/%E9%98%BF%E5%86%97%20%E2%80%93%20%E4%B8%8E%E6%88%91%E6%97%A0%E5%85%B3.flac?sign=FP4yWhFBzpXBLD2kbNZK2nMfufoKRFatO3YRAVw44cE=:0',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
+                    name: '伤心剖半',
+                    artist: '邓典',
+                    url: 'https://alist.bigbabyer.eu.org/d/115/%E5%AF%B9%E6%8E%A5Aplayer/%E9%82%93%E5%85%B8%20%E2%80%93%20%E4%BC%A4%E5%BF%83%E5%89%96%E5%8D%8A%20(DJ%E8%88%9E%E6%9B%B2%E7%89%88).mp3?sign=3px-0TxNSBCkljUsUZxdm44p6ZTxVOF770pUm5TM8J4=:0',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
                     name: 'I Hate Trot',
                     artist: '任昌丁',
                     url: 'https://alist.bigbabyer.eu.org/d/aicloud/Alist/%E9%9F%B3%E4%B9%90/%E4%BB%BB%E6%98%8C%E4%B8%81%20%E2%80%93%20%E1%84%82%E1%85%A1%E1%84%82%E1%85%B3%E1%86%AB%20%E1%84%90%E1%85%B3%E1%84%85%E1%85%A9%E1%84%90%E1%85%B3%E1%84%80%E1%85%A1%20%E1%84%89%E1%85%B5%E1%86%B6%E1%84%8B%E1%85%A5%E1%84%8B%E1%85%AD.flac?sign=boNydROFJNL4_y8GzWAZfojrFJAwT9JRDSjW4HAYy6Q=:0',
