--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
+                    name: '火车摇',
+                    artist: '神仙哥哥',
+                    url: 'https://www.notion.so/1eedacc9c0e4801ea561c9e859870842?pvs=4#1eedacc9c0e480c4b5bcdb3106dc8a41',
+                    cover: 'covers/IMG_3541.gif'
+                },
+                {
                     name: '谁',
                     artist: '洋澜一',
                     url: 'music/洋澜一-谁.flac',
