--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 {
                     name: '火车摇',
                     artist: '神仙哥哥',
-                    url: 'https://www.notion.so/1eedacc9c0e4801ea561c9e859870842?pvs=4#1eedacc9c0e480c4b5bcdb3106dc8a41',
+                    url: 'https://www.doubao.com/drive/s/d883fd10cc5a24b5',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
