--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 {
                     name: '火车摇',
                     artist: '神仙哥哥',
-                    url: 'https://www.doubao.com/drive/s/d883fd10cc5a24b5',
+                    url: 'https://alist.bigbabyer.eu.org/d/Cloud/%E9%9F%B3%E4%B9%90/%E7%A5%9E%E4%BB%99%E5%93%A5%E5%93%A5%20%E2%80%93%20%E7%81%AB%E8%BD%A6%E6%91%87(DJ%E5%AE%8C%E6%95%B4%E7%89%88).mp3?sign=JuvHMCt7-dhL5DjanDX-iU-Ytp4XzZ7BZpVCl-nppRM=:0',
                     cover: 'covers/IMG_3541.gif'
                 },
                 {
